--- a/demo/cli/package.json
+++ b/demo/cli/package.json
@@ -7,7 +7,6 @@
 
     "dependencies": {
         "commander": "== 0.6.1",
-        "render": "== 0.1.1",
-        "funkit": "== 0.3.2"
+        "render": "== 0.1.1"
     }
 }
