--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
         "request": "== 2.14.0"
     },
 
+    "devDependencies": {
+        "express": "== 3.1.0"
+    },
+
     "main": "./lib/rest-sugar-client.js",
 
     "repository": {
