--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
         "url": "https://github.com/bebraw/rest-sugar-client/issues"
     },
 
+    "scripts": {
+        "test": "node ./tests.js"
+    },
+
     "keywords": ["rest"],
 
     "licenses": [{
